# nake

./: flake.nix  hello.cabal  nake.cabal
nix/: hix.nix
src/: NakeAST.hs  NakeLexer.x  NakeParser.hs  NakeParser.info  NakeParser.y  Scheduler.hs  hello.hs
testdata/: simple.nake  test_enum.nake  test_rules.nake
