-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: nake
version: 1.0.0.2
license: BSD3
license-file: LICENSE
copyright: (c) Simon Marlow
author: Simon Marlow
maintainer: Simon Marlow <marlowsd@gmail.com>
bug-reports: mailto:marlowsd@gmail.com
stability: stable
homepage: http://www.haskell.org/hello/
synopsis: Hello World, an example package
category: Console, Text
cabal-version: >= 1.8
build-type: Simple

Description:
  This is an implementation of the classic "Hello World" program in
  Haskell, as an example of how to create a minimal Haskell
  application using Cabal and Hackage.  Please submit any suggestions and
  improvements.

source-repository head
  type:     darcs
  location: http://darcs.haskell.org/hello/

flag threaded
  default: False

library
  hs-source-dirs: src
  exposed-modules: 
    Build.Build
  build-depends: 
    base >= 4.2 && < 5
    , array >= 0.5 && < 0.6
    , parallel >= 3.2 && < 3.3
    , mtl >=2.2.2 && <3
    , text >= 0.2 && < 2.2
    , hashable >= 1.4 && < 1.5
    , containers >= 0.6 && < 0.7
    , algebraic-graphs >= 0.5 && < 0.8
    , filepath >= 1.4.1.0 && < 1.5
    , transformers >= 0.5.2.0 && < 0.7
    , extra >= 1.5.3 && < 1.8

executable nake
  hs-source-dirs: src
  other-modules:
    NakeLexer
    NakeAST
    NakeParser
    Scheduler
  main-is: Nake.hs
  build-tools:
    alex 
    , happy
  build-depends: 
    base >= 4.2 && < 5
    , array >= 0.5 && < 0.6
    , parallel >= 3.2 && < 3.3
    , mtl >=2.2.2 && <3
    , text >= 0.2 && < 2.2
    , hashable >= 1.4 && < 1.5
    , containers >= 0.6 && < 0.7
    , algebraic-graphs >= 0.5 && < 0.8
    , filepath >= 1.4.1.0 && < 1.5
    , transformers >= 0.5.2.0 && < 0.7
    , extra >= 1.5.3 && < 1.8

  if flag(threaded)
     ghc-options: -threaded
